main.rbのプロパティの取得・設定コールバック関数を実装

--- a/examples/asp3_tinet/main.cfg
+++ b/examples/asp3_tinet/main.cfg
@@ -42,15 +42,13 @@
 #include <netinet/in.h>
 #include <netinet/in_itron.h>
 #include <tinet_nic_defs.h>
-#include <netinet/in4_var.h>
+#include <netinet/in_var.h>
 #include <net/ethernet.h>
 #include <net/if6_var.h>
 
 INCLUDE("tecsgen.cfg");
 INCLUDE("tinet/tinet_asp.cfg");
 INCLUDE("tinet_main.cfg");
-#include "netapp/dhcp4_cli.h"
-INCLUDE("netapp/dhcp4_cli_asp.cfg");
 
 CRE_TSK(MAIN_TASK, { TA_ACT, 0, main_task, MAIN_PRIORITY, MAIN_STACK_SIZE, NULL });
 CRE_DTQ(MAIN_DATAQUEUE, { TA_TFIFO, 1, NULL });
