使用例を更新

--- a/examples/asp3_tinet/main.cfg
+++ b/examples/asp3_tinet/main.cfg
@@ -49,6 +49,8 @@
 INCLUDE("tecsgen.cfg");
 INCLUDE("tinet/tinet_asp.cfg");
 INCLUDE("tinet_main.cfg");
+INCLUDE("mruby_arduino.cfg");
 
 CRE_TSK(MAIN_TASK, { TA_ACT, 0, main_task, MAIN_PRIORITY, MAIN_STACK_SIZE, NULL });
 CRE_DTQ(MAIN_DATAQUEUE, { TA_TFIFO, 1, NULL });
+
